# bittools

./: CMakeLists.txt
cmake/: BitToolsConfig.cmake.in
include/bittools/: Algorithms.h  BitField.h  BitMap.h  BitStreamWriter.h  StringBitStreamWriter.h
src/: BitStreamWriter.cc  CMakeLists.txt  StringBitStreamWriter.cc
test/: BitStreamWriterTest.cc  CMakeLists.txt  StringBitStreamWriterTest.cc
